{
  "version": 4,
  "terraform_version": "0.12.26",
  "serial": 16,
  "lineage": "a248df16-e6f9-7baf-98c8-05cd25d3cd31",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "khdemo_example",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0edfed9d6e9a4031b",
            "arn": "arn:aws:ec2:us-east-1:240397202471:instance/i-0b7abaaba482b659c",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b7abaaba482b659c",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "mykeypair",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-013487c85afd65648",
            "private_dns": "ip-10-0-1-12.ec2.internal",
            "private_ip": "10.0.1.12",
            "public_dns": "ec2-34-231-169-63.compute-1.amazonaws.com",
            "public_ip": "34.231.169.63",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-002062d7a2d1538f5",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c805ad97426991b0",
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0ebed34af34713d95"
            ]
          },
          "dependencies": [
            "aws_key_pair.mykeypair",
            "aws_security_group.khdemo-security-group",
            "aws_subnet.khdemo-public-1",
            "aws_vpc.khdemo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "khdemo-gw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-01ec0733f41505e05",
            "owner_id": "240397202471",
            "tags": {
              "Name": "khdemo-vpc"
            },
            "vpc_id": "vpc-0584ae975e4a28783"
          },
          "dependencies": [
            "aws_vpc.khdemo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "khdemo-rt",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-03ba0979185d7bc96",
            "owner_id": "240397202471",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-01ec0733f41505e05",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "khdemo-public-1"
            },
            "vpc_id": "vpc-0584ae975e4a28783"
          },
          "dependencies": [
            "aws_internet_gateway.khdemo-gw",
            "aws_vpc.khdemo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "khdemo-rt-1-a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0499fbbed0b943592",
            "route_table_id": "rtb-03ba0979185d7bc96",
            "subnet_id": "subnet-0c805ad97426991b0"
          },
          "dependencies": [
            "aws_internet_gateway.khdemo-gw",
            "aws_route_table.khdemo-rt",
            "aws_subnet.khdemo-public-1",
            "aws_vpc.khdemo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "khdemo-rt-2-a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03e1f0a05f55c8948",
            "route_table_id": "rtb-03ba0979185d7bc96",
            "subnet_id": "subnet-0dc442c2c085d1cab"
          },
          "dependencies": [
            "aws_internet_gateway.khdemo-gw",
            "aws_route_table.khdemo-rt",
            "aws_subnet.khdemo-public-2",
            "aws_vpc.khdemo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "khdemo-rt-3-a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0adce385d6cfb78f4",
            "route_table_id": "rtb-03ba0979185d7bc96",
            "subnet_id": "subnet-044068a65849d7f42"
          },
          "dependencies": [
            "aws_internet_gateway.khdemo-gw",
            "aws_route_table.khdemo-rt",
            "aws_subnet.khdemo-public-3",
            "aws_vpc.khdemo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "khdemo-security-group",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:240397202471:security-group/sg-0ebed34af34713d95",
            "description": "security group that allows ssh and all egress traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ebed34af34713d95",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "khdemo-security-group",
            "name_prefix": null,
            "owner_id": "240397202471",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "khdemo-security-group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0584ae975e4a28783"
          },
          "dependencies": [
            "aws_vpc.khdemo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "khdemo-private-1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:240397202471:subnet/subnet-034ce99c07b7240f0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.4.0/24",
            "id": "subnet-034ce99c07b7240f0",
            "map_public_ip_on_launch": false,
            "owner_id": "240397202471",
            "tags": {
              "Name": "khdemo-private-1"
            },
            "vpc_id": "vpc-0584ae975e4a28783"
          },
          "dependencies": [
            "aws_vpc.khdemo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "khdemo-private-2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:240397202471:subnet/subnet-073e294610397f32e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.5.0/24",
            "id": "subnet-073e294610397f32e",
            "map_public_ip_on_launch": false,
            "owner_id": "240397202471",
            "tags": {
              "Name": "khdemo-private-2"
            },
            "vpc_id": "vpc-0584ae975e4a28783"
          },
          "dependencies": [
            "aws_vpc.khdemo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "khdemo-private-3",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:240397202471:subnet/subnet-0a4d69ec93c505734",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.6.0/24",
            "id": "subnet-0a4d69ec93c505734",
            "map_public_ip_on_launch": false,
            "owner_id": "240397202471",
            "tags": {
              "Name": "khdemo-private-3"
            },
            "vpc_id": "vpc-0584ae975e4a28783"
          },
          "dependencies": [
            "aws_vpc.khdemo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "khdemo-public-1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:240397202471:subnet/subnet-0c805ad97426991b0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0c805ad97426991b0",
            "map_public_ip_on_launch": true,
            "owner_id": "240397202471",
            "tags": {
              "Name": "khdemo-public-1"
            },
            "vpc_id": "vpc-0584ae975e4a28783"
          },
          "dependencies": [
            "aws_vpc.khdemo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "khdemo-public-2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:240397202471:subnet/subnet-0dc442c2c085d1cab",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-0dc442c2c085d1cab",
            "map_public_ip_on_launch": true,
            "owner_id": "240397202471",
            "tags": {
              "Name": "khdemo-public-2"
            },
            "vpc_id": "vpc-0584ae975e4a28783"
          },
          "dependencies": [
            "aws_vpc.khdemo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "khdemo-public-3",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:240397202471:subnet/subnet-044068a65849d7f42",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-044068a65849d7f42",
            "map_public_ip_on_launch": true,
            "owner_id": "240397202471",
            "tags": {
              "Name": "khdemo-public-3"
            },
            "vpc_id": "vpc-0584ae975e4a28783"
          },
          "dependencies": [
            "aws_vpc.khdemo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "khdemo-vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:240397202471:vpc/vpc-0584ae975e4a28783",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0b977db9ff2ee836a",
            "default_route_table_id": "rtb-0cd7734473763379f",
            "default_security_group_id": "sg-0e7c15f2f619a59e8",
            "dhcp_options_id": "dopt-57853f2d",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0584ae975e4a28783",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0cd7734473763379f",
            "owner_id": "240397202471",
            "tags": {
              "Name": "khdemo-vpc"
            }
          }
        }
      ]
    }
  ]
}